--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,24 @@ body {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
+header {
+    background-color: #C3CFD9;
+    height: 67px;
+}
+
+header h1 {
+    font-size: 34px;
+    color: #E8833A;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+}
+
+section h1 {
+    font-size: 24px;
+    color: #293845;
+    margin: 50px 0 50px;
+    text-align: center;
+}
