--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 header {
     background-color: #C3CFD9;
     height: 67px;
