--- a/src/Components/sitting/sitting.css
+++ b/src/Components/sitting/sitting.css
@@ -50,3 +50,34 @@
     background-color: #FBE192;
 }
 
+.buyerData {
+    margin: 40px 0 30px 0;
+    padding: 0 24px;
+}
+
+.buyerData label {
+    font-size: 18px;
+    color: #293845;
+}
+
+.buyerData .data {
+    width: 100%;
+    margin-bottom: 7px;
+    border: 1px solid #D4D4D4;
+    height: 51px;
+    font-size: 18px;
+    font-style: italic;
+    display: flex;
+}
+
+.buyerData .submit {
+    width: 225px;
+    height: 42px;
+    color: #fff;
+    background-color: #E8833A;
+    border-radius: 5px;
+    font-size: 18px;
+    margin: 57px auto 30px;
+    display: flex;
+    justify-content: center;
+}
