--- a/src/Components/HELPER/footer/movieOption.css
+++ b/src/Components/HELPER/footer/movieOption.css
@@ -16,11 +16,21 @@
 }
 
 .movie-option .movie-img img {
-    width: 100%;
-    height: 100%;
+    width: 64px;
+    height: 89px;
 }
 
 .movie-option span {
     font-size: 26px;
     color: #293845;
+}
+
+.movie-schedule-info {
+    display: flex;
+    flex-direction: column;
+    margin-right: 14px;
+}
+
+.movie-schedule-info span:first-child {
+    margin-bottom: 5px;
 }
