--- a/src/index.css
+++ b/src/index.css
@@ -10,15 +10,20 @@ a {
 header {
     background-color: #C3CFD9;
     height: 67px;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
 
 header h1 {
     font-size: 34px;
     color: #E8833A;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: center;
+    margin: auto;
+}
+
+header div {
+    margin-left: 24px;
+    position: absolute;
 }
 
 section h1 {
