--- a/src/Components/sitting/sitting.css
+++ b/src/Components/sitting/sitting.css
@@ -78,7 +78,12 @@
     background-color: #E8833A;
     border-radius: 5px;
     font-size: 18px;
-    margin: 57px auto 30px;
     display: flex;
     justify-content: center;
+}
+
+.submitButton {
+    width: 225px;
+    height: 42px;
+    margin: 57px auto 30px;
 }
